[package]
name = "bench"
version = "0.1.0"
authors = ["StupidHobbit <3mir33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"

[dev-dependencies]
criterion = "0.3"
ahash = "0.6.2"

[[bench]]
name = "benchmark_maps"
harness = false